--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "electron-is-dev": "^1.2.0",
     "electron-store": "^6.0.0",
     "element-plus": "latest",
+    "promise-mysql": "^5.0.3",
     "vue": "^3.0.5",
     "vue-router": "^4.0.0-beta.13"
   },
@@ -65,6 +66,8 @@
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@vitejs/plugin-vue": "^1.0.4",
+    "@vue/compiler-sfc": "^3.0.5",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
@@ -77,8 +80,6 @@
     "sass": "^1.26.10",
     "typescript": "^3.9.7",
     "vite": "latest",
-    "@vitejs/plugin-vue": "^1.0.4",
-    "@vue/compiler-sfc": "^3.0.5",
     "wait-on": "^5.2.1"
   },
   "keywords": [
